unpackaged/main/default/objects/pse__Project_Gantt_Preferences__c/pse__Project_Gantt_Preferences__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>These preferences control individual customizations to the appearance of Project Task Gantt and its interactions with users.</description>
    <label>Project Task Gantt Preferences</label>
</CustomObject>