unpackaged/main/default/objects/pse__Project_Gantt_Preferences__c/fields/pse__Alert_Task_Dates_Milestone__c.field-meta.xml
<CustomField>
    <fullName>pse__Alert_Task_Dates_Milestone__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, an alert graphic and tooltip message displays when Task dates are out of the Milestone target date range.</description>
    <inlineHelpText>If selected, an alert graphic and tooltip message displays when Task dates are out of the Milestone target date range.</inlineHelpText>
    <label>Alerts - Task dates - Milestone</label>
    <type>Checkbox</type>
</CustomField>