unpackaged/main/default/objects/pse__Project_Gantt_Preferences__c/fields/pse__Alert_Task_Dates_Project__c.field-meta.xml
<CustomField>
    <fullName>pse__Alert_Task_Dates_Project__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If selected, an alert graphic and tooltip displays when Task dates are out of the Project start date and end date ranges.</description>
    <inlineHelpText>If selected, an alert graphic and tooltip displays when Task dates are out of the Project start date and end date ranges.</inlineHelpText>
    <label>Alerts - Task dates - Project</label>
    <type>Checkbox</type>
</CustomField>