unpackaged/main/default/objects/pse__Project_Gantt_Preferences__c/fields/pse__Hide_Save_Preview__c.field-meta.xml
<CustomField>
    <fullName>pse__Hide_Save_Preview__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Determines whether a dialog box is displayed every time you click Save. This allows you to review the proposed changes to project tasks before committing them to the actual records in your organization. The setting is deselected by default.</inlineHelpText>
    <label>Hide Preview and Confirmation on Save</label>
    <type>Checkbox</type>
</CustomField>