unpackaged/main/default/objects/pse__Project_Gantt_Preferences__c/fields/pse__Resource_Demand_Default__c.field-meta.xml
<CustomField>
    <fullName>pse__Resource_Demand_Default__c</fullName>
    <defaultValue>"resource requests"</defaultValue>
    <inlineHelpText>Specifies the default resource demand type when clicking the Create Resource Demand button in Project Task Gantt.  Values are: "resource requests", "held resource requests", or "assignments". The default value is "resource requests".</inlineHelpText>
    <label>Resource Demand Default</label>
    <length>75</length>
    <type>Text</type>
</CustomField>