unpackaged/main/default/objects/pse__Project_Gantt_Preferences__c/fields/pse__Show_Task_Notes__c.field-meta.xml
<CustomField>
    <fullName>pse__Show_Task_Notes__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Show Task Notes in Gantt</inlineHelpText>
    <label>Show Task Notes</label>
    <type>Checkbox</type>
</CustomField>