unpackaged/main/default/objects/pse__Project_Gantt_Preferences__c/fields/pse__Single_Click_Task_Selection__c.field-meta.xml
<CustomField>
    <fullName>pse__Single_Click_Task_Selection__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This allows a user to change the default behavior of Gantt from double-click to single-click in the task pane.</description>
    <inlineHelpText>Allows you to change default Project Task Gantt task pane selection behavior from double-click to single-click. The setting is deselected by default.</inlineHelpText>
    <label>Single Click Task Selection</label>
    <type>Checkbox</type>
</CustomField>