unpackaged/main/default/objects/pse__Project_Gantt_Preferences__c/fields/pse__Zoom_Level__c.field-meta.xml
<CustomField>
    <fullName>pse__Zoom_Level__c</fullName>
    <defaultValue>"week"</defaultValue>
    <inlineHelpText>Specifies the default zoom level for the timeline. Valid values are: quarter, month, week, day or daydetail. This setting is set to week by default.</inlineHelpText>
    <label>Zoom Level</label>
    <length>25</length>
    <type>Text</type>
</CustomField>